refactor: migrate tool progress configuration from environment variables to config.yaml

--- a/cli-config.yaml.example
+++ b/cli-config.yaml.example
@@ -487,3 +487,11 @@ delegation:
 display:
   # Use compact banner mode
   compact: false
+
+  # Tool progress display level (CLI and gateway)
+  #   off:     Silent — no tool activity shown, just the final response
+  #   new:     Show a tool indicator only when the tool changes (skip repeats)
+  #   all:     Show every tool call with a short preview (default)
+  #   verbose: Full args, results, and debug logs (same as /verbose)
+  # Toggle at runtime with /verbose in the CLI
+  tool_progress: all
